# Habit_Tracker_Project

./: .env.sample  .flake8  Dockerfile  Dockerfile.celery  Dockerfile.django  Dockerfile.redis  Dockerfile_celery  Dockerfile_django  Dockerfile_postgres  README.md  celery_entrypoint.sh  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habit_tracker/: apps.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_alter_habit_time.py  0002_habit_publicity_habit_time_to_complete.py  0003_alter_habit_frequency.py
telegram_integration/: apps.py  models.py  serializers.py  tasks.py  telegram_bot.py  tests.py  urls.py  views.py
telegram_integration/migrations/: 0001_initial.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
